##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-08-04	tboggs <tboggs@users.sourceforge.net>

    * spectral/spectral.py (help): Removed legacy help function.

2013-07-24	tboggs <tboggs@users.sourceforge.net>

    * algorithms/detectors.py (RX.__init__): Initialize background.

2013-04-14	tboggs <tboggs@users.sourceforge.net>

    * io/envi.py (create_image): Applied Ferdinand Deger's bug fix patch.

2013-03-30	tboggs <tboggs@users.sourceforge.net>

    * __init__.py: Updated SPy version to 0.11

2013-03-20	tboggs <tboggs@users.sourceforge.net>

    Added unit-testing sub-package.

    * tests/__init__.py: New file.
    * tests/run.py: New file to execute all standard unit tests.
    * tests/spyfile.py: New file for testing SpyFile I/O.
    * tests/spytest.py: New file with base class for unit tests.
    * tests/transforms.py: New file for testing LinearTransform objects.

    Changed envi.save option from `byteswap` to `byteorder`.

    * io/envi.py (save_image): Switched to `byteorder` keyword.

2013-03-19	tboggs <tboggs@users.sourceforge.net>

    * io/spyfile.py:
      (FileNotFoundError): New class
      (find_file_path): raise FileNotFoundError.

2013-03-18	tboggs <tboggs@users.sourceforge.net>

    Replaced `image` and `save_image` with `open_image` and
    `save_rgb`, respectively.

    * __init__.py: Import open_image.
    * spectral.py:
      - Renamed `image` to `open_image`.
      - Provide deprecation warning for `image`.
    * graphics/__init__.py: Import `save_rgb`.
    * graphics/graphics.py:  Rename `save_image` to `save_rgb` and
        provide deprecation warning for `save_image`.

2013-03-09	tboggs <tboggs@users.sourceforge.net>

    Applied autopep8 to all files.

    Switched to using byte order in image dtypes (rather than swapping bytes